Fix DCHECK when closing AppWindow before nav commit

DCHECK happens for AppWindowCreateFunction did_respond() when an
AppWindow is closed before OnReadyToCommitFirstNavigation is invoked.
This is because AppWindowCreateFunction respond is deferred
until navigation is committed when PlzNavigate is enabled.

Bug: 783903
Change-Id: I2d0ef5ee1611c869314a8c9fe07808235f6e318c